docs: refatorado documentação de linux